# py2dag

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  cli.py  export_svg.py  parser.py  plan.html  plan.json  plan.pseudo  pseudo.py  pyproject.toml  setup.py
.github/workflows/: patch-release.yml  publish.yml
examples/: sample.py  sample2.py
py2dag/: __init__.py  cli.py  colors.py  export_dagre.py  export_svg.py  parser.py  pseudo.py
scripts/: version_utils.py
tests/: test_export.py  test_parser.py
